@@ -1,5 +1,10 @@
 2005-07-07  Sam Steingold  <sds@gnu.org>
 
+	* places.lisp (get-setf-expansion): do not return CLISP-specific
+	form ((SETF ...) ...) to avoid confusing 3rd party code walkers
+
+2005-07-07  Sam Steingold  <sds@gnu.org>
+
 	* utils/clispload.lsp (*expected-failures*): added MAKE-CONDITION.[34]
 
 2005-07-07  Sam Steingold  <sds@gnu.org>
